# pexels_client

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  plexels_client.rs
src/collection/: mod.rs  queries.rs
src/collection/models/: collection.rs  collection_data.rs  collection_media.rs  collection_media_query.rs  collection_media_response.rs  collection_query_response.rs  featured_collection_query.rs  media_data.rs  mod.rs  user_collection_query.rs
src/common/: color.rs  errors.rs  locale.rs  media_type.rs  mod.rs  orientation.rs  pexels_request_stats.rs  size.rs  user.rs
src/photos/: mod.rs  queries.rs
src/photos/models/: curated_query.rs  mod.rs  photo.rs  photo_query_response.rs  photo_response.rs  photo_src.rs  photos_data.rs  search_query.rs
src/videos/: mod.rs  queries.rs
src/videos/models/: mod.rs  popular_video_query.rs  video.rs  video_files.rs  video_pictures.rs  video_query_response.rs  video_response.rs  video_search_query.rs  videos_data.rs
