[package]
name = "pexels_client"
version = "0.1.1"
edition = "2021"
authors = ["Pranitha Madapathi <pranitha.madapathi@gmail.com>"]
description = "Rust wrapper for Pexels API"
license = "MIT"
repository = "https://github.com/sattva9/pexels_client"
keywords = ["pexels_client", "pexels"]
readme = "README.md"
documentation = "https://docs.rs/pexels_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.16", features = ["json"] }